# Aegis

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build.yml
docs/: ARCHITECTURE.md  BROWSER_ADDONS.md  EDITOR_DESIGN.md  SEARCH_DESIGN.md
src/: main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/browser/: adblock.rs  bookmarks.rs  history.rs  mod.rs  privacy.rs  userscripts.rs
src-tauri/src/editor/: autocomplete.rs  mod.rs  tokenizer.rs
src-tauri/src/search/: indexer.rs  metasearch.rs  mod.rs
src/components/: browser.js  editor.js  search.js  settings.js
src/lib/: codemirror-setup.js  emmet.js  fingerprint-protect.js  gm-api.js  shortcuts.js  tag-rename.js  tauri-bridge.js  toast.js
